Fix alignment for action icons in table

--- a/Kartverket.Metadatakatalog/Content/custom-icons.css
+++ b/Kartverket.Metadatakatalog/Content/custom-icons.css
@@ -4,6 +4,7 @@
     width: 25px;
     height: 25px;
     display: inline-block;
+    vertical-align: middle;
 }
 
 .btn .custom-icon {
@@ -17,6 +18,7 @@
     background-image: url(img/ikoner/info.svg);
     width: 20px;
     height: 20px;
+    vertical-align: bottom;
 }
 
 .btn .custom-icon.custom-icon-info {
